todo: corrigir bug em Grid e overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,6 @@
 }
 
 body{
-  margin: 0;
   width: 100vw;
   height: 100vh;
 }
